--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -21,9 +21,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    # # Step 2: Log in to GitHub Container Registry
+    # - name: Log in to GitHub Container Registry
+    #   run: echo "${{ secrets.TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
     # Step 2: Log in to GitHub Container Registry
     - name: Log in to GitHub Container Registry
-      run: echo "${{ secrets.TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      run: docker login ghcr.io -u ${{ github.actor }} --password ${{ secrets.TOKEN }}
 
     # Step 3: Build Docker image
     - name: Build Docker image
