--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -31,8 +31,8 @@ jobs:
 
     # Step 3: Build Docker image
     - name: Build Docker image
-      run: docker build -t ghcr.io/${{ github.actor }}/learning-github-cotainer-registry-api:${GITHUB_RUN_NUMBER}
+      run: docker build -t ghcr.io/${{ github.actor }}/learning-github-cotainer-registry-api:latest .
 
     # Step 4: Push Docker image to GitHub Container Registry
     - name: Push Docker image
-      run: docker push ghcr.io/${{ github.actor }}/learning-github-cotainer-registry-api:${GITHUB_RUN_NUMBER}
+      run: docker push ghcr.io/${{ github.actor }}/learning-github-cotainer-registry-api:latest
